# grokforge-prime-aether

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
.github/workflows/: ci.yml
benchmarks/: osworld_subset.py
docs/: ARCHITECTURE.md
src/: lib.rs  main.rs
src/python/: ggs_engine.py  test_ggs.py
tests/: landlock_smoke.rs  seccomp_smoke.rs  wasm_smoke.rs
