[package]
name = "grokforge-prime"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "grokforge-prime"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
wat = "1"
